--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 /* ===== RESET ===== */
+
 body,
 #root {
   margin: 0;
@@ -12,14 +13,17 @@ body,
 }
 
 /* ===== LAYOUT ===== */
+
 .container {
   min-height: 100vh;
-  display: flex;
+  overflow-y: auto;
 
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;        /* 👈 important */
+  align-items: center;
+
   padding-top: 200px;
+  padding-bottom: 40px;
 
   background-size: cover;
   background-position: center;
@@ -33,7 +37,14 @@ body,
   font-weight: 500;
   color: rgba(255, 255, 255, 0.9);
   margin-bottom: 20px;
+
+  /* animation */
+  opacity: 0;
+  transform: translateY(12px);
+  animation: promptFadeIn 0.8s ease forwards;
+  animation-delay: 0.2s;
 }
+
 
 /* ===== CARD ===== */
 .card {
@@ -49,7 +60,6 @@ body,
     inset 0 1px 0 rgba(255, 255, 255, 0.2);
 
   color: #ffffff;
-  margin-bottom: 200px;
 }
 
 .card:hover {
@@ -63,6 +73,12 @@ body,
   gap: 8px;
   margin-top: 8%;
   margin-bottom: 10%;
+
+  /* 👇 load animation */
+  opacity: 0;
+  transform: translateY(10px);
+  animation: inputFadeIn 0.8s ease forwards;
+  animation-delay: 0.4s; /* comes after prompt */
 }
 
 .input-row input {
@@ -98,6 +114,11 @@ body,
   background: #1b89ff;
   color: #ffffff;
   cursor: pointer;
+
+  /* animation */
+  animation: buttonPopIn 0.6s ease forwards;
+  animation-delay: 0.55s;
+  opacity: 0;
 }
 
 .input-row button:hover {
@@ -208,4 +229,45 @@ body,
 
 .delete-btn:hover {
   text-shadow: 0 0 6px rgba(229, 15, 18, 0.8);
+}
+
+/* Footer */
+.footer {
+  margin-top: auto;              /* 👈 THIS pushes it down */
+  padding-top: 40px;
+
+  text-align: center;
+  font-size: 1.5rem;
+  color: rgba(255, 255, 255, 0.6);
+
+  user-select: none;
+}
+.my-name {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.my-name:hover {
+  text-decoration-color: aquamarine;
+  color: #ffffff;
+}
+
+/* animations */
+@keyframes promptFadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes inputFadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes buttonPopIn {
+  to {
+    opacity: 1;
+  }
 }
